design issues solved

--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -18,61 +18,61 @@
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i]])}">{{item["txt"+myIndex[i]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i]])">(</ion-label>{{item["txt"+myIndex[i]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+1]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+1]])}">{{item["txt"+myIndex[i+1]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+1]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+1]])">(</ion-label>{{item["txt"+myIndex[i+1]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+1]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+2]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+2]])}">{{item["txt"+myIndex[i+2]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+2]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+2]])">(</ion-label>{{item["txt"+myIndex[i+2]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+2]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+3]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+3]])}">{{item["txt"+myIndex[i+3]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+3]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+3]])">(</ion-label>{{item["txt"+myIndex[i+3]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+3]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+4]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+4]])}">{{item["txt"+myIndex[i+4]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+4]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+4]])">(</ion-label>{{item["txt"+myIndex[i+4]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+4]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+5]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+5]])}">{{item["txt"+myIndex[i+5]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+5]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+5]])">(</ion-label>{{item["txt"+myIndex[i+5]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+5]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+6]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+6]])}">{{item["txt"+myIndex[i+6]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+6]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+6]])">(</ion-label>{{item["txt"+myIndex[i+6]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+6]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+7]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+7]])}">{{item["txt"+myIndex[i+7]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+7]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+7]])">(</ion-label>{{item["txt"+myIndex[i+7]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+7]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+8]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+8]])}">{{item["txt"+myIndex[i+8]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+8]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+8]])">(</ion-label>{{item["txt"+myIndex[i+8]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+8]])">)</ion-label></ion-label>
               </div>
             </ion-col>
             <ion-col class="ion-margin" style="align-items: center; text-align: center;">
               <ion-label>{{myIndex[i+9]}}</ion-label>
               <div>
-                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+9]])}">{{item["txt"+myIndex[i+9]]}}</ion-label>
+                <ion-label [ngClass]="{'my-css': myEvaluater(item['txt'+myIndex[i+9]])}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+9]])">(</ion-label>{{item["txt"+myIndex[i+9]]}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item['txt'+myIndex[i+9]])">)</ion-label></ion-label>
               </div>
             </ion-col>
     
@@ -84,31 +84,31 @@
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Shree</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Shree)}">{{item.Shree?item.Shree:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Shree)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Shree)">(</ion-label>{{item.Shree?item.Shree:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Shree)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label> Vashikaran</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Vashikaran)}">{{item.Vashikaran?item.Vashikaran:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Vashikaran)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Vashikaran)">(</ion-label>{{item.Vashikaran?item.Vashikaran:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Vashikaran)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Sudarshan</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Sudarshan)}">{{item.Sudarshan?item.Sudarshan:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Sudarshan)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Sudarshan)">(</ion-label>{{item.Sudarshan?item.Sudarshan:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Sudarshan)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Vastu</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Vastu)}">{{item.Vastu?item.Vastu:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Vastu)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Vastu)">(</ion-label>{{item.Vastu?item.Vastu:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Vastu)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Planet</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Planet)}">{{item.Planet?item.Planet:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Planet)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Planet)">(</ion-label>{{item.Planet?item.Planet:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Planet)">)</ion-label></ion-label>
             </div>
           </ion-col>
         </ion-row>
@@ -116,31 +116,31 @@
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Love</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Love)}">{{item.Love?item.Love:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Love)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Love)">(</ion-label>{{item.Love?item.Love:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Love)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Tara</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Tara)}">{{item.Tara?item.Tara:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Tara)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Tara)">(</ion-label>{{item.Tara?item.Tara:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Tara)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Grah</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Grah)}">{{item.Grah?item.Grah:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Grah)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Grah)">(</ion-label>{{item.Grah?item.Grah:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Grah)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Matsya</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Matsya)}">{{item.Matsya?item.Matsya:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Matsya)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Matsya)">(</ion-label>{{item.Matsya?item.Matsya:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Matsya)">)</ion-label></ion-label>
             </div>
           </ion-col>
           <ion-col class="ion-margin" style="align-items: center; text-align: center;">
             <ion-label>Meditation</ion-label>
             <div>
-              <ion-label [ngClass]="{'my-css': myEvaluater(item.Meditation)}">{{item.Meditation?item.Meditation:" "}}</ion-label>
+              <ion-label [ngClass]="{'my-css': myEvaluater(item.Meditation)}"><ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Meditation)">(</ion-label>{{item.Meditation?item.Meditation:" "}}<ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="myEvaluater(item.Meditation)">)</ion-label></ion-label>
             </div>
           </ion-col>
         </ion-row>
@@ -151,7 +151,7 @@
         Total Amount&nbsp;:&nbsp;{{item.CouponTotalAmount}}<br>
         Purchased On&nbsp;:&nbsp;{{item.CopuonCreateDate | date:'d-M-yyyy'}} &thinsp; {{item.CopuonCreateTime | myPipe}}<br>
         Date&nbsp;:&nbsp;{{item.DrawDate | date:'d-M-yyyy'}} &thinsp; {{item.DrawTime | myPipe}}<br>
-        <ng-container *ngIf="item.YantraId!==null">Winning Yantra&nbsp;:&nbsp;{{YantraArray[item.YantraId]}}</ng-container>
+        <ion-label style="color: #ff0000 !important; font-weight: bold;" *ngIf="item.YantraId!==null">Winning Yantra&nbsp;:&nbsp;{{YantraArray[item.YantraId]}}</ion-label >
         <!-- Winning Yantra:{{}}<br> -->
       </div>
     </ion-card-content>
